<resources>
    <string name="app_name">Cyber Scouter</string>
    <string name="button1">Admin</string>
    <string name="scoutingButtonText">Scouting</string>
    <string name="button3">Sync data</string>
    <string name="button4">Sync pictures</string>
    <string name="button5">MAIN PAGE</string>
    <string name="admin1">Test mode</string>
    <string name="admin2">Update code</string>
    <string name="admin3">Setup sync</string>
    <string name="check1">red</string>
    <string name="check2">blue</string>
    <string name="check3">Pit</string>
    <string name="check4">Review</string>
    <string name="Proj_Name">The CyberScouter</string>
    <string name="Tab">Tablet #_</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_admin1">Admin1</string>
    <string name="title_activity_submit_page">SubmitPage</string>
    <string name="PreviousButton">Previous</string>
    <string name="NeedsReviewButton">Needs Review</string>
    <string name="SubmitButton">Submit</string>
    <string name="SubmitPageTitle">Submission</string>
    <string name="NamePickerButton">Name Picker</string>
    <string name="CancelButton">Cancel</string>
    <string name="NextButton">Next</string>
    <string name="DefaultButtonName">DefaultName</string>
    <string name="SummaryQuestionTitle">Summary Questions</string>
    <string name="PreviousAnswer"> Previous Answer </string>
    <string name="NextAnswer"> Next Answer </string>
    <string name="title_activity_auto_page">Setup</string>
    <string name="SkipMatchButton">Skip Match</string>
    <string name="YesButton">Y</string>
    <string name="NoButton">N</string>
    <string name="MoveBonusText">Move Bonus</string>
    <string name="GroundStartingPositionLeftButton">Ground left</string>
    <string name="PlayedDefense">Played Defense</string>
    <string name="ScoredCargo">Scored Cargo</string>
    <string name="BrokeDown">Broke Down</string>
    <string name="ClimbFailed">Climb Failed</string>
    <string name="ClimbStatus">Climb Status</string>
    <string name="NABrokeDown">No Attempt - Broke Down</string>
    <string name="NAPlayedDefense">No Attempt - Played Defense</string>
    <string name="NAScoredCargo">No Attempt - Scored Cargo</string>
    <string name="CAFailed">Climb Attempted - Failed</string>
    <string name="CASuccess">Climb Attempted - Success</string>
    <string name="Highest">Highest</string>
    <string name="Lowest">Lowest</string>
    <string name="GroundStartingPositionRightButton">Ground right</string>
    <string name="LevelOneStartingPositionLeftButton">Lvl 1 left</string>
    <string name="LevelTwoStartingPositionLeftButton">Lvl 2 left</string>
    <string name="LevelOneStartingPositionRightButton">Lvl 1 right</string>
    <string name="LevelTwoStartingPositionRightButton">Lvl 2 right</string>
    <string name="LevelOneStartingPositionCenterButton">Lvl 1 center</string>
    <string name="LevelOneStartingPositionButton">Lvl 1</string>
    <string name="LevelTwoStartingPositionButton">Lvl 2</string>
    <string name="LevelThreeStartingPositionButton">Lvl 3</string>
    <string name="StartingPositionText">Starting Position</string>
    <string name="PreloadText">Preload</string>
    <string name="PreloadCargoButton">Cargo</string>
    <string name="PreloadPanelButton">Panel</string>
    <string name="PositionLeft">Left</string>
    <string name="TeamText">Team</string>
    <string name="StartMatchButton">Start Match</string>
    <string name="PlusButton">+</string>
    <string name="MinusButton">-</string>
    <string name="RocketText">Rocket</string>
    <string name="CargoShipText">Cargo Ship</string>
    <string name="LowShotText">Low Shot</string>
    <string name="MedShotText">Med Shot</string>
    <string name="HighShotText">High Shot</string>
    <string name="NearPanelText">Near Panel</string>
    <string name="CargoText">Cargo</string>
    <string name="FarPanelText">Far Panel</string>
    <string name="PanelText">Panel</string>
    <string name="RedOneText">Red One</string>
    <string name="RedTwoText">Red Two</string>
    <string name="RedThreeText">Red Three</string>
    <string name="BlueOneText">Blue One</string>
    <string name="BlueTwoText">Blue Two</string>
    <string name="BlueThreeText">Blue Three</string>
    <string name="BlueAllianceText">Blue Alliance</string>
    <string name="RedAllianceText">Red Alliance</string>
    <string name="CurrentMatch">Match Und</string>
    <string name="CurrentTeam">Und #</string>
    <string name="StartMatch">Start</string>
    <string name="NamePickerPage">Name Picker</string>
    <string name="ReturnToMainMenu">Return To Main Menu</string>
    <string name="ScoutingPage">Level One Scouting</string>
    <string name="ClimbPageText">Climb</string>
    <string name="ZeroText">0</string>
    <string name="NoAttemptButton">No Attempt</string>
    <string name="WasHelpedButton">Was Helped</string>
    <string name="HelpedButton">Helped</string>
    <string name="NoHelpButton">No Help</string>
    <string name="ClimbText">Climb</string>
    <string name="ClimbAssistText">Climb Assist</string>
    <string name="RobotProblemsText">Robot Problems</string>
    <string name="LostCommText">Lost Comm?</string>
    <string name="BrokeDownText">Broke Down?</string>
    <string name="TippedOverText">Tipped Over?</string>
    <string name="GroundPickupText">Ground Pickup?</string>
    <string name="TerminalPickupText">Terminal Pickup?</string>
    <string name="PlayedDefenseText">Played Defense?</string>
    <string name="DefenseAgainstText">Defense against them?</string>
    <string name="RatingText">How did they do?</string>
    <string name="ShootFrom">Where did they shoot from?</string>
    <string name="ShootWhileText">Shoot while driving?</string>
    <string name="NamePickerTitle">Select Your Name</string>
    <string name="SubsystemBrokeText">Subsystem broke?</string>
    <string name="OppAllianceCargoText">Score wrong color cargo?</string>
    <string name="ShootFromLaunchpad">Did they shoot from the launchpad?</string>
    <string name="PickupText">Pick Up Cargo</string>
    <string name="NumberOfPreloads">Preload</string>
    <string name="TypicalCargoStoredHigh">High Hub</string>
    <string name="TypicalCargoStoredLow">Low Hub</string>
    <string name="AttemptedText">Attempted</string>
    <string name="WorkingAuto">Working Auto</string>
    <string name="AvgCargoScored">Average Cargo Scored</string>
    <string name="StartPositionPit">Preferred Starting Position</string>
    <string name="HumanPlayer">Human Player</string>
    <string name="tagTeam">Team %s</string>
    <string name="tagEvent">Event %s</string>
    <string name="tagMatch">Match %d</string>
    <string name="ResetButton">Reset</string>
    <string name="DidNotShow">Did Not Show</string>
    <string name="ourTeamName">Team 195</string>
    <string name="ourTeamCityState">Southington, Connecticut</string>
    <string name="roleTagText">Alliance station:</string>
    <string name="eventTagText">Event:</string>
    <string name="sandstormTitle">Sandstorm</string>
    <string name="teleopTitle">Teleop</string>
    <string name="logo_description">Team Logo</string>
    <string name="zone_text">Zone %d</string>
    <string name="outer_text">Outer %d</string>
    <string name="upper_text">Upper</string>
    <string name="inner_text">Inner</string>
    <string name="lower_text">Lower</string>
    <string name="back_text">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pit_scouting">PitScoutingActivity</string>
    <string name="tab_text_0">Selection</string>
    <string name="tab_text_1">Physical Properties</string>
    <string name="tab_text_2">Auto</string>
    <string name="tab_text_3">Teleop</string>
    <string name="tab_text_4">Endgame</string>
    <string name="title_activity_word_cloud">WordCloudActivity</string>
    <string name="PenaltyText">Penalties?</string>
    <string name="InnerText">Inner</string>
    <string name="OuterText">Outer</string>
    <string name="LowerText">Lower</string>
    <string name="AutoLabel">Auto</string>
    <string name="PowerPortContent">PowerPort</string>
    <string name="PositionOnTheRungs">Position on the Rungs</string>
    <string name="SubSystemText">Sub System Broke</string>
    <string name="HopperLoadText">Hopper Load</string>
    <string name="PositionCenter">Center</string>
    <string name="PositionRight">Right</string>
    <string name="DidDefendText">Did They Play Defense</string>
    <string name="MovedOnBar">Moved On Bar </string>
    <string name="LevelText">Level</string>
    <string name="InsteadOfClimb">What Did They Do Instead Of Climb</string>
    <string name="NoAttempt">No Attempt</string>
    <string name="LowClimb">Bar 1</string>
    <string name="MiddleClimb">Bar 2</string>
    <string name="HighClimb">Bar 3</string>
    <string name="TraversalClimb">Bar 4</string>
    <string name="ClimbPosition">Can They Climb?</string>
    <string name="AutoSummary">Auto Summary</string>
    <string name="HighestRungClimbed">Highest Rung Climbed</string>
    <string name="connection_indicator_desc">Green=Bluetooth Connected, Yellow=Network Connected, Red=Not Connected</string>
    <string name="Size">Size</string>
    <string name="Length">Length</string>
    <string name="Width">Width</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="Inches">in</string>
    <string name="Pounds">lb</string>
    <string name="DriveType">Drive Type</string>
    <string name="Motor">Motor Type</string>
    <string name="DriveMotors"># of Drive Motors</string>
    <string name="TopSpeed">Top Speed</string>
    <string name="FeetPerSecond">ft/sec</string>
    <string name="Wheel">Wheel Type</string>
    <string name="NumberWheels"># of Wheels</string>
    <string name="GearRatio">Highest Gear Ratio</string>
    <string name="GearSpeeds">Gear Speeds</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="ProgLang">Programming Language</string>
    <string name="Pneumatics">Pneumatics</string>
    <string name="Colon">:</string>
    <string name="Drive">Drive</string>
    <string name="Other">Other</string>
    <string name="CarryingCapacity">Carrying Capacity</string>
    <string name="SortCargo">Sort Cargo</string>
    <string name="PlayDefense">Play Defense</string>
    <string name="EvadeDefense">Evade Defense</string>
    <string name="ShootWhileDriving">Shoot While Driving</string>
    <string name="TeleopStrategy">Teleop Strategy</string>
    <string name="DefenseStrategy">Defense Strategy</string>
    <string name="oneOne">1</string>
    <string name="twoTwo">2</string>
    <string name="threeThree">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="Continue">Continue</string>
    <string name="LongCrap">Please Select a Starting Position to Continue</string>
    <string name="canTheyClimb">Can They Climb?</string>
    <string name="typicalHighestRung">Typical Highest Rung</string>
    <string name="positionOnBar">Position On Bar</string>
    <string name="climbTime">Time For Climb</string>
    <string name="Team1">Team 1111</string>
    <string name="Team2">Team 2222</string>
    <string name="Team3">Team 3333</string>
    <string name="DefenseTwoText">Defense</string>
    <string name="MultiRobotDefense">Multi-Robot Defense?</string>
    <string name="PrimaryDefense">Primary Defense</string>
    <string name="SecondaryDefense">Secondary Defense</string>
    <string name="HowLong">How Long</string>
    <string name="DefenseSummary">Defense Summary</string>
    <string name="SelectOne">Select One</string>
    <string name="L2ScoutingPage">Level Two Scouting</string>
    <string name="MatchLabel">Match:</string>
</resources>