<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelTwoScoutingTwo">

    <TextView
        android:id="@+id/textView39"
        android:layout_width="324dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="128dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_HowLong"
        tools:text="@string/DefenseSummary" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <TextView
        android:id="@+id/textView_HowLong"
        android:layout_width="324dp"
        android:layout_height="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="128dp"
        android:text="@string/HowLong"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Team3" />

    <Spinner
        android:id="@+id/spinner_HowLong"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:layout_marginEnd="128dp"
        android:contentDescription="@string/SelectOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_HowLong"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/spinner_SecondayDefense"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:contentDescription="@string/SelectOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView__MutliRobotDefense3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView__MutliRobotDefense3"
        android:layout_width="324dp"
        android:layout_height="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:text="@string/SecondaryDefense"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_PrimaryDefense" />

    <Button
        android:id="@+id/button_MRDNo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:text="@string/NoButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/button_MRDYes"
        app:layout_constraintTop_toBottomOf="@+id/button_Team2" />

    <Button
        android:id="@+id/button_MRDYes"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:text="@string/YesButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/textView__MutliRobotDefense"
        app:layout_constraintTop_toBottomOf="@+id/button_Team1" />

    <Button
        android:id="@+id/button_Team1"
        android:layout_width="224dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/Team1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Defense" />

    <Button
        android:id="@+id/button_Team2"
        android:layout_width="224dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/Team2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Defense" />

    <Button
        android:id="@+id/button_Previous2"
        android:layout_width="226dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/NextButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_Previous"
        android:layout_width="226dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/PreviousButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_Defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/DefenseTwoText"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Team3"
        android:layout_width="224dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/Team3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Defense" />

    <TextView
        android:id="@+id/textView__MutliRobotDefense"
        android:layout_width="324dp"
        android:layout_height="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/MultiRobotDefense"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Team1" />

    <TextView
        android:id="@+id/textView__MutliRobotDefense2"
        android:layout_width="324dp"
        android:layout_height="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:text="@string/PrimaryDefense"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView__MutliRobotDefense" />

    <Spinner
        android:id="@+id/spinner_PrimaryDefense"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:contentDescription="@string/SelectOne"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView__MutliRobotDefense2" />

</android.support.constraint.ConstraintLayout>